--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Taskmaster Pro</title>
 </head>
@@ -18,13 +19,14 @@
       <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add
         Task</button>
       <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
-      <p class="mt-auto d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
+      <p class="mt-auto d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas
+        architecto ipsa
         excepturi aut non
         laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
       </p>
     </header>
-    <main class="col-12 col-lg-9">
-      <div class="m-5 row justify-content-around"></div>
+    <main class="col-12 col-lg-9 d-flex flex-column">
+      <div class="m-5 row justify-content-around">
         <!-- todo start -->
         <div class="col-12 col-md-6 col-lx-3 mb-3">
           <div class="card">
@@ -32,10 +34,6 @@
               To Do
             </h4>
             <ul id="list-toDo" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
-              <p class="m1">Sample task to do</p>
-            </li>
             </ul>
           </div>
         </div>
@@ -47,10 +45,6 @@
               In progress
             </h4>
             <ul id="list-toDo" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
-              <p class="m1">Sample in progress</p>
-            </li>
             </ul>
           </div>
         </div>
@@ -62,10 +56,6 @@
               In review
             </h4>
             <ul id="list-toDo" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
-              <p class="m1">Sample In review</p>
-            </li>
             </ul>
           </div>
         </div>
@@ -77,20 +67,15 @@
               Done
             </h4>
             <ul id="list-toDo" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
-              <p class="m1">Sample done</p>
-            </li>
             </ul>
           </div>
         </div>
-        <div class="trash">
-          <div class="w-100 bg-danger p-3 text-center text-light display-4">
-            Drop Here to Remove.
-          </div>
-        <!-- done end -->
       </div>
-
+      <!-- done end -->
+      <div class="mt-auto" id="trash">
+        <div class="w-100 bg-danger p-3 text-center text-light display-4">
+          Drop Here to Remove.
+        </div>
       </div>
     </main>
   </div>
@@ -127,6 +112,8 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/script.js"></script>
